--- a/Heimdall/app/src/main/res/values/strings.xml
+++ b/Heimdall/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!--Jacob's strings-->
     <string name="app_name">Heimdall</string>
     <string name="sign_in">Sign in</string>
     <string name="home">Home</string>
@@ -7,8 +8,30 @@
     <string name="addCard">Add a card</string>
     <string name="addTwitter">Add a Twitter</string>
     <string name="cardInfo">Card info</string>
-    <string name="settings">Settings</string>
     <string name="recommendations">Card Recommendations</string>
     <string name="signint1"><u>Register an account</u></string>
     <string name="signint2"><u>Reset your password</u></string>
+    <!--Twitter additions page-->
+    <!--<string name="app_name">add_twiter_follow</string>-->
+    <string name="pageTitle">Adding Twitter Follows</string>
+    <!--Tab tags-->
+    <string name="recomend">Recomendations</string>
+    <string name="twitterAdd">Twitter Additions</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search&#8230;</string>
+    <string name="backgroundDescript">Background color white</string>
+    <string name="userDirect">Enter the companies one by one that you wish to add to your watchlist:</string>
+    <!--Setting page--><!--reuse of tab tags given above-->
+    <string name="title_activity_settings">settings</string>
+    <string name="personalInfo">Personal Information</string>
+    <string name="username">Username</string>
+    <string name="userName">myName</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="emailDefault">someone@example.com</string>
+    <string name="subscription">Receive email updates</string>
+    <!--Recommendation page-->
+    <string name="temp">Temp</string>
+    <string name="title_activity_recommendations">recommendations</string>
+    <!--reuse of tab tags given above-->
 </resources>
